force-app/main/default/objects/LLC_BI__Projected_Draw_Schedule__c/LLC_BI__Projected_Draw_Schedule__c.object-meta.xml
<CustomObject>
    <description>This junction object between Pricing Option and Loan that references individual draw events.</description>
    <label>Projected Draw Schedule</label>
    <nameField>
        <label>Projected Draw Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projected Draw Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>