force-app/main/default/objects/LLC_BI__Projected_Draw_Schedule__c/fields/LLC_BI__Cumulative_Utilized_Percentage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Cumulative_Utilized_Percentage__c</fullName>
    <description>The system populates this optional percent field with the sum of all percents from the associated projected draw event records. By default, it is blank.</description>
    <inlineHelpText>This system-populated field displays the sum of all percents from the associated projected draw event records.</inlineHelpText>
    <label>Cumulative Utilized Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>