force-app/main/default/objects/LLC_BI__Projected_Draw_Schedule__c/fields/LLC_BI__Pricing_Option__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Pricing_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this lookup field with the Pricing Option record. By default, this field is blank.</description>
    <inlineHelpText>This system-populated field displays the unique identifier for the Pricing Option record.</inlineHelpText>
    <label>Pricing Option</label>
    <referenceTo>LLC_BI__Pricing_Option__c</referenceTo>
    <relationshipLabel>Projected Draw Schedules</relationshipLabel>
    <relationshipName>Projected_Draw_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>