force-app/main/default/objects/LLC_BI__Projected_Draw_Schedule__c/fields/LLC_BI__Total_Cumulative_Draw_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Cumulative_Draw_Amount__c</fullName>
    <description>The system populates this optional currency field with the total amount of projected draw items associated to a projected draw schedule. By default, it is blank.</description>
    <label>Total Cumulative Draw Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>