force-app/main/default/objects/LLC_BI__Projected_Draw_Schedule__c/fields/LLC_BI__Weighted_Average_Utilization__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Weighted_Average_Utilization__c</fullName>
    <description>The system populates this optional percent field to indicate the average utilization of the projected draw schedule weighted across all periods. By default, it is blank.</description>
    <label>Weighted Average Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>